<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecundariasSociales">

    <TextView
        android:id="@+id/pTotales"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disfrazValue" />

    <TextView
        android:id="@+id/actuarValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convencerValue" />

    <TextView
        android:id="@+id/timarValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actuarValue" />

    <TextView
        android:id="@+id/comercioValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callejeoValue" />

    <TextView
        android:id="@+id/seducirValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comercioValue" />

    <TextView
        android:id="@+id/disfrazValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timarValue" />

    <TextView
        android:id="@+id/protocoloValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seducirValue" />

    <TextView
        android:id="@+id/empatiaValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentirValue" />

    <TextView
        android:id="@+id/liderazgoValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empatiaValue" />

    <TextView
        android:id="@+id/callejeoValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intimidarValue" />

    <TextView
        android:id="@+id/convencerValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protocoloValue" />

    <TextView
        android:id="@+id/mentirValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social" />

    <SeekBar
        android:id="@+id/sbDisfraz"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbTimar" />

    <SeekBar
        android:id="@+id/sbComercio"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbCallejeo" />

    <SeekBar
        android:id="@+id/sbConvencer"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbProtocolo" />

    <SeekBar
        android:id="@+id/sbActuar"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbConvencer" />

    <SeekBar
        android:id="@+id/sbTimar"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbActuar" />

    <SeekBar
        android:id="@+id/sbSeducir"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbComercio" />

    <SeekBar
        android:id="@+id/sbIntimidar"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbLiderazgo" />

    <SeekBar
        android:id="@+id/sbCallejeo"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbIntimidar" />

    <SeekBar
        android:id="@+id/sbProtocolo"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbSeducir" />

    <SeekBar
        android:id="@+id/sbLiderazgo"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbEmpatia" />

    <SeekBar
        android:id="@+id/sbEmpatia"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbMentir" />

    <TextView
        android:id="@+id/intimidar"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/intimidar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liderazgo" />

    <TextView
        android:id="@+id/comercio"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/comercio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callejeo" />

    <TextView
        android:id="@+id/seducir"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/seducir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comercio" />

    <TextView
        android:id="@+id/protocolo"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/protocolo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seducir" />

    <TextView
        android:id="@+id/convencer"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/convencer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protocolo" />

    <TextView
        android:id="@+id/actuar"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/actuar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convencer" />

    <TextView
        android:id="@+id/timar"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/timar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actuar" />

    <TextView
        android:id="@+id/callejeo"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/callejeo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intimidar" />

    <TextView
        android:id="@+id/empatia"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/empatia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentir" />

    <TextView
        android:id="@+id/liderazgo"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/liderazgo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empatia" />

    <SeekBar
        android:id="@+id/sbMentir"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social" />

    <TextView
        android:id="@+id/social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/socialP"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mentir"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/mentir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social" />

    <TextView
        android:id="@+id/disfraz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/disfraz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timar" />

    <TextView
        android:id="@+id/intimidarValue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liderazgoValue" />

    <Button
        android:id="@+id/atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="468dp"
        android:text="@string/atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="12dp"
        android:text="Puntos\nRestantes:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbDisfraz" />
</android.support.constraint.ConstraintLayout>